--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:RVtroNPYv2P5bPkNvagegvXih2NtZivlCGnyvChr7OA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://10.1.2.170:8000
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
