--- a/public/web.config
+++ b/public/web.config
@@ -18,6 +18,12 @@
           <action type="Rewrite" url="index.php" />
         </rule>
       </rules>
+      <httpProtocol>
+        <customHeaders>
+           <add name="Access-Control-Allow-Headers" value="Origin, Authorization, X-Requested-With, Content-Type, Accept" />
+           <add name="Access-Control-Allow-Methods" value="POST,GET,OPTIONS,PUT,DELETE" />
+        </customHeaders>
+      </httpProtocol>
     </rewrite>
   </system.webServer>
 </configuration>
