--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "league/oauth2-client": "^2.4"
+        "league/oauth2-client": "^2.4",
+        "fruitcake/laravel-cors" : "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
